# src/openapi/openapi.yml
@@ -7,131 +7,6 @@ servers:
   - url: /v0
 
 components:
-  schemas:
-    ID:
-      type: integer
-      minimum: 1
-    Policy:
-      type: object
-      properties:
-        id:
-          description: Internal ID
-          allOf:
-            - $ref: '#/components/schemas/ID'
-            - readOnly: true
-        name:
-          description: Name
-          type: string
-        department:
-          description: Department Name
-          type: string
-        constraint:
-          type: object
-          properties:
-            sched_avail:
-              type: array
-              items:
-                type: string
-                format: date-time
-              maxItems: 2
-            serv_avail:
-              type: number
-            consumption:
-              type: string
-            density:
-              type: string
-            attribute:
-              type: string
-            cost:
-              type: number
-            location:
-              type: string
-              maxLength: 4
-    BriefPolicy:
-      type: object
-      properties:
-        id:
-          description: Internal ID
-          allOf:
-            - $ref: '#/components/schemas/ID'
-            - readOnly: true
-        name:
-          description: Name
-          type: string
-        department:
-          description: Department Name
-          type: string
-
-  parameters:
-    policy_id:
-      name: id
-      in: path
-      description: ID of the Policy
-      required: true
-      schema:
-        $ref: '#/components/schemas/ID'
-
-  requestBodies:
-
-    policy_post:
-      description: Policy
-      required: true
-      content:
-        application/json:
-          schema:
-            type: object
-            allOf:
-              - $ref: '#/components/schemas/Policy'
-              - required:
-                  - name
-                  - department
-          example:
-            name: Test User
-            department: Test Department
-            constraint:
-              location: RDU2
-    policy_patch:
-      description: Policy properties to update
-      required: true
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Policy'
-          example:
-            constraint:
-              location: RDU2
-    policy_search:
-      description: Policy search
-      required: true
-      content:
-        application/json:
-          schema:
-            type: object
-            allOf:
-              - $ref: '#/components/schemas/Policy'
-          example:
-            constraint:
-              location: RDU2
-
-
-  responses:
-    problem: {$ref: 'common.yml#/responses/problem'}  # TODO remove
-
-    policies_list:
-      description: List of Policies
-      content:
-        application/json:
-          schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/BriefPolicy'
-    policies_get:
-      description: Policy
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Policy'
-
   securitySchemes:
     basic:
       type: http
@@ -355,86 +230,19 @@ paths:
   /tower/webhook_notification:
     post:
       $ref: 'tower.yml#/endpoints/webhook_notification'
+
   /policies:
     get:
-      summary: Get policy list
-      tags: [policy]
-      operationId: rhub.api.policies.list_policies
-      responses:
-        200:
-          $ref: '#/components/responses/policies_list'
-        default:
-          $ref: '#/components/responses/problem'
-      security:
-        - oauth2: []
+      $ref: 'policy.yml#/endpoints/policy_list'
     post:
-      summary: Create policy
-      tags: [policy]
-      operationId: rhub.api.policies.create_policy
-      requestBody:
-        $ref: '#/components/requestBodies/policy_post'
-      responses:
-        200:
-          $ref: '#/components/responses/policies_get'
-        default:
-          $ref: '#/components/responses/problem'
-      security:
-        - oauth2: []
-  /policies/{id}:
+      $ref: 'policy.yml#/endpoints/policy_create'
+  /policies/{policy_id}:
     get:
-      summary: Get policy
-      tags: [policy]
-      operationId: rhub.api.policies.get_policy
-      parameters:
-        - $ref: '#/components/parameters/policy_id'
-      responses:
-        200:
-          $ref: '#/components/responses/policies_get'
-        404:
-          description: Not found
-        default:
-          $ref: '#/components/responses/problem'
-      security:
-        - oauth2: []
+      $ref: 'policy.yml#/endpoints/policy_get'
     patch:
-      summary: Update policy
-      tags: [policy]
-      operationId: rhub.api.policies.update_policy
-      parameters:
-        - $ref: '#/components/parameters/policy_id'
-      requestBody:
-        $ref: '#/components/requestBodies/policy_patch'
-      responses:
-        200:
-          $ref: '#/components/responses/policies_get'
-        default:
-          $ref: '#/components/responses/problem'
-      security:
-        - oauth2: []
+      $ref: 'policy.yml#/endpoints/policy_update'
     delete:
-      summary: Delete policy
-      tags: [policy]
-      operationId: rhub.api.policies.delete_policy
-      parameters:
-        - $ref: '#/components/parameters/policy_id'
-      responses:
-        200:
-          $ref: '#/components/responses/policies_get'
-        default:
-          $ref: '#/components/responses/problem'
-      security:
-        - oauth2: []
+      $ref: 'policy.yml#/endpoints/policy_delete'
   /policies/search:
     post:
-      summary: Search Policies
-      tags: [policy]
-      operationId: rhub.api.policies.search_policies
-      requestBody:
-        $ref: '#/components/requestBodies/policy_search'
-      responses:
-        200:
-          $ref: '#/components/responses/policies_list'
-        default:
-          $ref: '#/components/responses/problem'
-      security:
-        - oauth2: []
+      $ref: 'policy.yml#/endpoints/policy_search'
